Fixed settings switch-tna-sai.conf, syncd.conf
Signed-off-by: Taras Keryk <tarasx.keryk@intel.com>

--- a/device/barefoot/x86_64-accton_es8632_32d-r0/syncd.conf
+++ b/device/barefoot/x86_64-accton_es8632_32d-r0/syncd.conf
@@ -14,7 +14,7 @@ y_profile_set() {
 
     Y_PROFILE=$(ls -d /opt/bfn/install_y*_profile 2> /dev/null | head -1)
     if [[ -z $Y_PROFILE  ]]; then
-        echo "No P4 profile found for Newport"
+        echo "No P4 profile found for Davenport"
         return
     fi
 
