[BFN] Updated P4 profile naming for syncd
Signed-off-by: Taras Keryk <tarasx.keryk@intel.com>

--- a/device/barefoot/x86_64-accton_as9516_32d-r0/syncd.conf
+++ b/device/barefoot/x86_64-accton_as9516_32d-r0/syncd.conf
@@ -7,12 +7,13 @@ y_profile_set() {
         return
     fi
 
-    if [[ $(readlink /opt/bfn/install) =~ "install_y"  ]]; then
-        echo "/opt/bfn/install is a link to Y profile"
+    PROFILE_DEFAULT=$(readlink /opt/bfn/install)
+    if [[ "$PROFILE_DEFAULT" == "install_y"*"_profile" ||  $PROFILE_DEFAULT == *"_tofino2"  ]]; then
+        echo "/opt/bfn/install is a link to Y Tofino2 profile"
         return
     fi
 
-    Y_PROFILE=$(ls -d /opt/bfn/install_y*_profile 2> /dev/null | head -1)
+    Y_PROFILE=$(ls -d /opt/bfn/install_y*_profile -d  /opt/bfn/install_y*_tofino2 2> /dev/null | head -1)
     if [[ -z $Y_PROFILE  ]]; then
         echo "No P4 profile found for Newport"
         return
