Added subdev_list section to chip_list in switch-tna-sai.conf

--- a/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
+++ b/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
@@ -2,8 +2,17 @@
     "chip_list": [
         {
             "chip_family": "Tofino3",
+            "instance": 0,
+            "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:05:00.0",
+            "pcie_int_mode": 1,
             "sds_fw_path": "share/tofino_sds_fw/avago/firmware",
-            "instance": 0
+            "subdev_list": [
+                {
+                    "subdev_instance": 0,
+                    "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:05:00.0",
+                    "cdev_name": "/dev/bf0"
+                }
+            ]
         }
     ],
     "p4_devices": [
