Fixed switch-tna device path

--- a/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
+++ b/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
@@ -10,7 +10,7 @@
                 {
                     "subdev_instance": 0,
                     "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:06:00.0",
-                    "cdev_name": "/dev/bf0"
+                    "cdev_name": "/dev/bf0s0"
                 }
             ]
         }
