--- a/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
+++ b/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
@@ -1,16 +1,26 @@
 {
     "chip_list": [
         {
-            "chip_family": "Tofino3",
             "instance": 0,
-            "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:06:00.0",
+            "pcie_fn": 0,
             "pcie_int_mode": 1,
+            "pcie_bus": 5,
             "sds_fw_path": "share/tofino_sds_fw/avago/firmware",
+            "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:05:00.0",
+            "chip_family": "tofino3",
+            "pcie_dev": 0,
+            "id": "asic-0",
+            "pcie_domain": 0,
             "subdev_list": [
                 {
                     "subdev_instance": 0,
-                    "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:06:00.0",
+                    "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:05:00.0",
                     "cdev_name": "/dev/bf0s0"
+                },
+                {
+                    "subdev_instance": 1,
+                    "pcie_sysfs_prefix": "/sys/devices/pci0000:00/0000:00:03.0/0000:06:00.0",
+                    "cdev_name": "/dev/bf0s1"
                 }
             ]
         }
