--- a/device/barefoot/x86_64-accton_es9632_32d-r0/stinson/switch-tna-sai.conf
+++ b/device/barefoot/x86_64-accton_es9632_32d-r0/stinson/switch-tna-sai.conf
@@ -1,15 +1,24 @@
 {
     "chip_list": [
         {
-            "chip_family": "Tofino3",
-            "sds_fw_path": "share/tofino_sds_fw/avago/firmware",
-            "instance": 0
+            "instance": 0,
+            "chip_family": "tofino3",
+            "subdev_list": [
+                {
+                    "subdev_instance": 0,
+                    "cdev_name": "/dev/bf0s0"
+                },
+		{
+		    "subdev_instance": 1,
+		    "cdev_name": "/dev/bf0s1"
+		}
+            ]
         }
     ],
     "p4_devices": [
         {
             "device-id": 0,
-            "agent0": "lib/platform/x86_64-accton_es9632_32d-r0/libpltfm_mgr.so",
+            "agent0": "lib/platform/x86_64-accton_as9526bf_32do-r0/libpltfm_mgr.so",
             "p4_programs": [
                 {
                     "program-name": "switch",
@@ -21,8 +30,6 @@
                             "context": "share/switch/pipe/context.json"
                         }
                     ],
-                    "model_json_path" : "share/switch/aug_model.json",
-                    "switchapi_port_add": false,
                     "non_default_port_ppgs": 5
                 }
             ]
@@ -32,7 +39,6 @@
         {
             "device-id": 0,
             "model_json_path": "share/switch/aug_model.json",
-            "non_default_port_ppgs": 5,
             "switchapi_port_add": false
         }
     ]
