--- a/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
+++ b/device/barefoot/x86_64-accton_as9526bf_32do-r0/davenport/switch-tna-sai.conf
@@ -35,6 +35,7 @@
         {
             "device-id": 0,
             "model_json_path": "share/switch/aug_model.json",
+            "non_default_port_ppgs": 5,
             "switchapi_port_add": false
         }
     ]
