--- a/device/barefoot/x86_64-accton_as9526bf_32o-r0/stinson/switch-tna-sai.conf
+++ b/device/barefoot/x86_64-accton_as9526bf_32o-r0/stinson/switch-tna-sai.conf
@@ -40,6 +40,7 @@
             "device-id": 0,
             "model_json_path": "share/switch/aug_model.json",
             "non_default_port_ppgs": 5,
+            "override_log_level": false,
             "switchapi_port_add": false
         }
     ]
